fixed background color not overflowing, updated todos

--- a/my-app/src/app/config/config.component.css
+++ b/my-app/src/app/config/config.component.css
@@ -1,4 +1,4 @@
-body {
+background-grey {
     background-color: #f3f5f5;
 }
 ::-webkit-scrollbar {
